# wiki-as-readme

./: .dockerignore  .env example  .gitignore  Dockerfile  Dockerfile.action  Dockerfile.server  LICENSE  NOTICE.md  README.md  README_ko.md  SECURITY.md  WIKI-AS-README-AS-ACTION.yml  WIKI.md  WIKI_AS_README_AS_NOTION.yml  action.yml  docker-compose.yml  entrypoint.sh  pyproject.toml  verify_converter.py  verify_notion_sync.py
.github/scripts/: sync_version.py
.github/workflows/: WIKI-AS-README-AS-ACTION.yml  docker-publish.yml  version-sync.yml  wiki-as-readme-action.yml
docs/plans/: 2026-02-25-llm-timeout-handling-design.md
examples/: langgraph_readme_en.md  langgraph_readme_ko.md  wiki_as_README.md
src/: action_entrypoint.py  app.py  server.py
src/agent/: llm.py
src/api/v1/endpoints/: webhook.py  wiki.py
src/core/: config.py  logger_config.py
src/models/: api_schema.py  github_webhook_schema.py  wiki_schema.py
src/prompts/: wiki_contents_generator.yaml  wiki_structure_generator.yaml
src/providers/: base.py  bitbucket.py  github.py  gitlab.py  local.py
src/services/: notion_converter.py  notion_sync.py  repo_fetcher.py  structure_analyzer.py  task_store.py  wiki_formatter.py  wiki_generator.py  wiki_worker.py
src/utils/: file_filter.py  generate_file_url.py
