[project]
name = "wiki-as-readme"
version = "1.2.2"
description = "Turn your codebase into a comprehensive Wiki in minutes, delivered in a single Readme."
readme = "README.md"
authors = [{ name = "catuscio", email = "catuscio@hotmail.com" }]
keywords = ["wiki", "readme", "documentation", "mermaid", "litellm", "fastapi", "streamlit"]
requires-python = ">=3.12"
dependencies = [
    "google-auth>=2.45.0",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "litellm>=1.80.11",
    "loguru>=0.7.3",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "python-dotenv>=1.2.1",
    "pyyaml>=6.0.3",
    "requests>=2.32.5",
]

[project.optional-dependencies]
ui = [
    "streamlit>=1.51.0",
    "streamlit-mermaid",
]
api = [
    "fastapi>=0.128.0",
    "uvicorn>=0.40.0",
    "gunicorn>=23.0.0",
]
notion = [
    "notion-client>=2.7.0",
]
all = [
    "wiki-as-readme[ui,api,notion]",
]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "ruff>=0.14.10",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = [
    "F",
    "W",
    "E",
    "I",
    "UP",
    "C4",
    "FA",
    "ISC",
    "ICN",
    "RET",
    "SIM",
    "TID",
    "TC",
    "TD",
    "NPY",
]

ignore = [
    "E501",
]

fixable = ["ALL"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
